|
|
|
|
Reported:
|
2023-10-20 10:36 UTC by Riesi
|
|
Modified:
|
2024-05-02 13:21 UTC
(History)
|
|
|
4
users
(show)
|
|
|
See Also:
|
|
|
Crash report or crash signature:
|
["(anonymous namespace)::GtkInstanceSpinButton::signal_activate() [clone .lto_priv.1893]","(anonymous namespace)::GtkInstanceSpinButton::signal_activate() [clone .lto_priv.1858]","libvclplug_gtk3lo.so","GtkInstanceEditable::signal_activate"]
|
|
|