Resolves: tdf#157849 gtk_spin_button_update callback can delete widget

so later GtkInstanceEditable::signal_activate is on deleted widget

Change-Id: I9bb9848b4554792db11fc7b0e2d3491a94975b3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158168
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>